# ROS2_my_robot_arm_ws

./: .gitignore  README.md
Documentation/: 1_my_robot setup.md  2_my_robot_model.md  3_my_robot_IK.md  3a_my_robot_IK.md  3b_my_robot_IK.md
src/my_arm_control/: package.xml  setup.cfg  setup.py
src/my_arm_control/config/: arm_params.yaml  joints.yaml  pose_puma.yaml  poses.yaml
src/my_arm_control/launch/: move_tool_to_pose.launch.py  real.launch.py  send_joint_trajectory.launch.py  send_pose_trajectory.launch.py  send_pose_trajectory_ew.launch.py
src/my_arm_control/my_arm_control/: joint_state_estimator.py  move_tool_to_pose.py  send_joint_trajectory.py  send_pose_trajectory_ew.py  send_pose_trajectory_puma.py  send_pose_trajectory_puma_limits.py  send_pose_trajectory_puma_simple.py  send_pose_trajectory_ur5e.py  serial_bridge.py
src/my_arm_description/: CMakeLists.txt  package.xml
src/my_arm_description/launch/: display.launch.py
src/my_arm_description/rviz/: my_arm.rviz
src/my_arm_description/urdf/: my_arm.urdf.xacro  my_arm_puma.urdf.xacro  my_arm_ur5e.urdf.xacro  my_arm_ur5e2.urdf.xacro
src/my_arm_gz/: package.xml  setup.cfg  setup.py
src/my_arm_gz/config/: gz_controllers.yaml
src/my_arm_gz/launch/: gz_sim.launch.py
src/my_arm_gz/worlds/: empty.sdf
