<?xml version="1.0"?>
<package format="3">
  <name>my_arm_description</name>
  <version>0.0.1</version>
  <description>Simple 6DOF arm description (xacro) for RViz and TF.</description>
  <maintainer email="you@todo.todo">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
